--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                     <button class="col border border-primary rounded-3 m-1" onclick="displaycontent('.')">.</button>
                                     <button class="col border border-primary rounded-3 m-1" onclick="ac()">AC</button>
                                     <button class="col border border-primary rounded-3 m-1 "
-                                        style="color: rgb(255, 255, 255); background-color: blueviolet;" onclick="eval()">=</button>
+                                        style="color: rgb(255, 255, 255); background-color: blueviolet;"  onclick = "eval1() ">=</button>
                                 </div>
                             </div>
                         </table>
